# cohost-static

./: Cargo.toml  README.md
.github/workflows/: rust-windows.yml
src/: cohost.rs  main.rs
zola/: .gitignore  config.toml
zola/static/static/: style.css
zola/templates/: _post.html  base.html  index.html  project-home.html  project-post.html  project.html
zola/templates/shortcodes/: audio.html  image.html  youtube.html
zola/templates/tags/: list.html  single.html
