[package]
name = "cohost-static"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
camino = "1.1.9"
clap = { version = "4.5.18", features = ["derive"] }
percent-encoding = "2.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["formatting", "parsing", "serde"] }
toml = "0.8.19"
url = { version = "2.5.2", features = ["serde"] }